2009-12-08  John W. Eaton  <jwe@octave.org>

	* Makefile.am (DOCSTRINGS): Depend on $(GEN_FCN_FILES) instead
	of $(FCN_FILES_IN).  Pass $(GEN_FCN_FILES) to mkdoc instead of
	$(FCN_FILES_IN).  Use mv instead of $(simple_move_if_change_rule).
	(EXTRA_DIST): Include  $(GEN_FCN_FILES) in the list.

2009-12-07  Jaroslav Hajek  <highegg@gmail.com>

	* general/interp1.m: Allow discontinuities (jumps) for the "nearest" and
	"linear" methods. Document the feature and add a few tests.

2009-12-06  Rik <rik@nomad.inbox5.com>

	* Makefile.am: Distribute DOCSTRINGS so that documentation will not require
	rebuild after merely untarring a distribution.
	* mkdoc: Change output to refer to mfiles as "scripts/..." rather than
	"$srcdir/...".  Otherwise, distributed DOCSTRINGS file will not match
	DOCSTRINGS created under a VPATH build and documentation will be
	unnecessarily rebuilt.

2009-12-05  Jaroslav Hajek  <highegg@gmail.com>

	* set/ismember.m: Simplify.

2009-12-03  John W. Eaton  <jwe@octave.org>

	* audio/wavwrite.m: Delete generated a.wav file after each test.

	* Makefile.am (DIRSTAMP_FILES, DISTCLEANFILES): New variables.
	(DOCSTRINGS): Also depend on $(FCN_FILES_IN).  Pass
	$(FCN_FILES_IN) to mkdoc instead of $(GEN_FCN_FILES).  Tell mkdoc
	to look for $(FCN_FILES_IN) files in $(srcdir), not build
	directory.
	(DISTCLEANFILES): New variable.
	Don't silence dirstamp, DOCSTRINGS, $(GEN_FCN_FILES), and PKG_ADD
	rules.

	* audio/module.mk, deprecated/module.mk, elfun/module.mk,
	help/module.mk, general/module.mk, geometry/module.mk,
	image/module.mk, io/module.mk, linear-algebra/module.mk,
	miscellaneous/module.mk, @ftp/module.mk, optimization/module.mk,
	path/module.mk, pkg/module.mk, plot/module.mk,
	polynomial/module.mk, set/module.mk, signal/module.mk,
	sparse/module.mk, specfun/module.mk, special-matrix/module.mk,
	startup/module.mk, statistics/base/module.mk,
	statistics/distributions/module.mk, statistics/models/module.mk,