@@ -1,3 +1,7 @@
+2009-12-07  Jaroslav Hajek  <highegg@gmail.com>
+
+	* general/interp1q.m: Use more optimal code.
+
 2009-12-08  John W. Eaton  <jwe@octave.org>
 
 	* Makefile.am (DOCSTRINGS): Depend on $(GEN_FCN_FILES) instead
